# main_letter

./: .gitignore  pyproject.toml
main_letter/: manage.py
main_letter/letter/: consumers.py  routing.py  services.py  urls.py  views.py
main_letter/letter/templates/letter/: base.html  index.html
main_letter/main_letter/: asgi.py  settings.py  urls.py  wsgi.py
