[tool.poetry]
name = "main-letter"
version = "0.1.0"
description = ""
authors = ["grenui92 <grenui92@gmail.com>"]
readme = "README.md"
packages = [{include = "main_letter"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
